# BCR_classifier

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml
protein_transformer/: train.py  train_hydra.py
protein_transformer/config/: config.yaml
protein_transformer/config/data/: data.yaml
protein_transformer/config/model/: model.yaml
protein_transformer/data/: datamodule.py  dataset.py
protein_transformer/models/: esm_classifier.py
scripts/: esm_model.ipynb  prepare_dataset.ipynb
tests/: conftest.py  test_config.py  test_datamodule.py  test_dataset.py  test_model.py
